--- a/frontend/src/app/app.html
+++ b/frontend/src/app/app.html
@@ -1,9 +1,14 @@
-<app-navbar></app-navbar>
+<div class="flex flex-col min-h-screen">
 
-  <router-outlet></router-outlet>
+  <app-navbar></app-navbar>
 
-<app-footer></app-footer>
+  <main class="flex-grow relative">
+    <router-outlet></router-outlet>
+  </main>
 
-@if (authService.isUserLoggedIn()) {
-  <app-chat-widget></app-chat-widget>
-}
+  <app-footer></app-footer>
+
+  @if (authService.isUserLoggedIn()) {
+    <app-chat-widget></app-chat-widget>
+  }
+</div>
